--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,7 @@ body {
     width: 960px;
 }
 
-.place {
+article {
     background-color: #FFF;
     border-color: #CCC #999 #999 #CCC;
     border: 1px solid #CCC;
@@ -17,12 +17,12 @@ body {
     padding: 10px;
 }
 
-.place h2 {
+article h2 {
     border-bottom: 1px dashed #7E9F19;
     margin: 0;
 }
 
-.place a {
+article a {
     color: #2C88A7;
     font-weight: bold;
 }
@@ -37,7 +37,7 @@ h1 a:hover {
     color: #FFF;
 }
 
-.place img {
+article img {
     border: 1px solid #7E9F19;
     float: left;
     margin: 10px 10px 0 0;
@@ -48,12 +48,12 @@ h1 a:hover {
     clear: both;
 }
 
-.footer {
+footer {
     font-size: 12px;
     text-align: center;
 }
 
-.sidenote {
+aside {
     background-color: #FFFBE4;
     border: 1px solid #C9BC8F;
     float: right;
@@ -61,12 +61,12 @@ h1 a:hover {
     width: 260px;
 }
 
-.sidenote h3 {
+aside h3 {
     font-size: 14px;
     margin-top: 0;
 }
 
-.sidenote ol {
+aside ol {
     font-size: 12px;
 }
 
